// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPropertyBuildingLink constructs the correct query 1`] = `
Object {
  "sql": "
      REPLACE INTO property_building_links
      SET ?
   ",
  "values": Object {
    "link_type": "latlng",
    "property_id": 111,
    "vzd_building_id": 222,
  },
}
`;

exports[`createPropertyLandLink constructs the correct query 1`] = `
Object {
  "sql": "
      REPLACE INTO property_land_links
      SET ?
   ",
  "values": Object {
    "link_type": "latlng",
    "property_id": 111,
    "vzd_land_id": 222,
  },
}
`;

exports[`findVzdBuildingIdByLatLng constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id, ST_DISTANCE(bounds, POINT(?, ?)) as distance
      FROM vzd_buildings
      WHERE MBRIntersects(bounds, LineString(Point(?, ?), Point(?, ?)))
      AND is_usable = 1
      ORDER BY distance ASC
      LIMIT 1
   ",
  "values": Array [
    56.123,
    24.222,
    56.122499999999995,
    24.221500000000002,
    56.1235,
    24.2225,
  ],
}
`;

exports[`findVzdBuildingIdByLocation constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id
      FROM vzd_buildings
      WHERE is_usable = 1
        AND city = ?
        AND street = ?
        AND house_number = ?
      ORDER BY id ASC
      LIMIT 1
   ",
  "values": Array [
    "riga",
    "brivibas",
    "12",
  ],
}
`;

exports[`findVzdIdByCadastreNumber using "building" category constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id
      FROM vzd_buildings
      WHERE is_usable = 1
        AND cadastral_designation = ?
      ORDER BY id ASC
      LIMIT 1
   ",
  "values": Array [
    "01000762043",
  ],
}
`;

exports[`findVzdIdByCadastreNumber using "land" category constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id
      FROM vzd_land
      WHERE is_usable = 1
        AND cadastral_designation = ?
      ORDER BY id ASC
      LIMIT 1
   ",
  "values": Array [
    "01000762043",
  ],
}
`;

exports[`findVzdLandIdByLatLng constructs the correct query 1`] = `
Object {
  "sql": "
      SELECT id, ST_DISTANCE(bounds, POINT(?, ?)) as distance
      FROM vzd_land
      WHERE MBRIntersects(bounds, LineString(Point(?, ?), Point(?, ?)))
      AND is_usable = 1
      ORDER BY distance ASC
      LIMIT 1
   ",
  "values": Array [
    56.123,
    24.222,
    56.122499999999995,
    24.221500000000002,
    56.1235,
    24.2225,
  ],
}
`;
